[package]
name = "dolly"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Composable camera rigs"
repository = "https://github.com/h3r2tic/dolly"
documentation = "https://docs.rs/dolly"
keywords = ["gamedev", "camera", "3d"]
categories = ["game-development"]
readme = "crates-io.md"

[dependencies]
bevy_math = "0.16"
bevy_transform = "0.16"
#glam = ">=0.21, <=0.24"

[dev-dependencies]
#macroquad = "0.4.4"
